--- a/public/index.html
+++ b/public/index.html
@@ -18,20 +18,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>Gologram</title>
+    <title>Galogram</title>
+
+    <script type="text/javascript" >
+      (function(m,e,t,r,i,k,a){
+        m[i]=m[i] ||
+        function(){
+          (m[i].a=m[i].a||[]).push(arguments)
+        };
+      m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+      ym(87785774, "init", {
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true,
+          webvisor:true,
+          ecommerce:"dataLayer"
+      });
+    </script>
+    
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript><div><img src="https://mc.yandex.ru/watch/87785774" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    
   </body>
 </html>
